; ModuleID = '/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__cannot_stash_when_there_are_no_local_change.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/stash/extr_save.c_test_stash_save__cannot_stash_when_there_are_no_local_change.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@repo = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [5 x i8] c"what\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"where\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"who\00", align 1
@signature = common dso_local global i32 0, align 4
@.str.3 = private unnamed_addr constant [15 x i8] c"Initial commit\00", align 1
@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@GIT_STASH_DEFAULT = common dso_local global i32 0, align 4
@.str.4 = private unnamed_addr constant [11 x i8] c"stash/when\00", align 1
@GIT_STASH_INCLUDE_UNTRACKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_stash_save__cannot_stash_when_there_are_no_local_change() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32, align 4
  %3 = load i32, i32* @repo, align 4
  %4 = call i32 @git_repository_index(i32** %1, i32 %3)
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_index_add_bypath(i32* %6, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %8 = call i32 @cl_git_pass(i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32 @git_index_add_bypath(i32* %9, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0))
  %11 = call i32 @cl_git_pass(i32 %10)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @git_index_add_bypath(i32* %12, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0))
  %14 = call i32 @cl_git_pass(i32 %13)
  %15 = load i32, i32* @repo, align 4
  %16 = load i32, i32* @signature, align 4
  %17 = call i32 @cl_repo_commit_from_index(i32* null, i32 %15, i32 %16, i32 0, i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str.3, i64 0, i64 0))
  %18 = load i32*, i32** %1, align 8
  %19 = call i32 @git_index_free(i32* %18)
  %20 = load i32, i32* @GIT_ENOTFOUND, align 4
  %21 = load i32, i32* @repo, align 4
  %22 = load i32, i32* @signature, align 4
  %23 = load i32, i32* @GIT_STASH_DEFAULT, align 4
  %24 = call i32 @git_stash_save(i32* %2, i32 %21, i32 %22, i32* null, i32 %23)
  %25 = call i32 @cl_assert_equal_i(i32 %20, i32 %24)
  %26 = call i32 @p_unlink(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.4, i64 0, i64 0))
  %27 = load i32, i32* @GIT_ENOTFOUND, align 4
  %28 = load i32, i32* @repo, align 4
  %29 = load i32, i32* @signature, align 4
  %30 = load i32, i32* @GIT_STASH_INCLUDE_UNTRACKED, align 4
  %31 = call i32 @git_stash_save(i32* %2, i32 %28, i32 %29, i32* null, i32 %30)
  %32 = call i32 @cl_assert_equal_i(i32 %27, i32 %31)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_repository_index(i32**, i32) #1

declare dso_local i32 @git_index_add_bypath(i32*, i8*) #1

declare dso_local i32 @cl_repo_commit_from_index(i32*, i32, i32, i32, i8*) #1

declare dso_local i32 @git_index_free(i32*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_stash_save(i32*, i32, i32, i32*, i32) #1

declare dso_local i32 @p_unlink(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
